--- a/main.html
+++ b/main.html
@@ -15,9 +15,8 @@
     .overlay { position: absolute; bottom: 10px; right: 10px; z-index: 10; }
     .button { display: block; margin: 5px 0; padding: 10px; background: rgba(0, 0, 0, 0.5); color: white; border: none; border-radius: 5px; cursor: pointer; }
     .info { position: absolute; bottom: 10px; right: 150px; z-index: 10; background: rgba(0, 0, 0, 0.5); color: white; padding: 10px; border-radius: 5px; }
-    #startARBtn { position: absolute; top: 10px; left: 10px; z-index: 10; background: rgba(0, 0, 0, 0.7); color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; }
-    #captureButton { position: absolute; top: 50px; left: 10px; z-index: 10; background: rgba(0, 0, 0, 0.7); color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; }
-    #predictionCanvas { position: absolute; top: 0; left: 0; z-index: 15; }
+    #startARBtn, #captureButton { position: absolute; top: 10px; left: 10px; z-index: 10; background: rgba(0, 0, 0, 0.7); color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; }
+    #captureButton { top: 50px; left: 10px; }
   </style>
 </head>
 <body>
@@ -28,7 +27,6 @@
     <button class="button" id="showInfoBtn">Show Info</button>
   </div>
   <div class="info" id="info">Information will be displayed here.</div>
-  <canvas id="predictionCanvas"></canvas>
 
   <script>
     let flower, reticle, camera, scene, renderer, session, glBinding;
@@ -40,9 +38,16 @@
     let model;
 
     async function loadModel() {
-      // Загрузка модели TensorFlow.js
-      model = await tf.loadLayersModel('jsModel/model.json');
-      console.log("Модель загружена");
+      try {
+        model = await tf.loadLayersModel('jsModel/model.json');
+        updateInfo("Model loaded successfully");
+      } catch (error) {
+        updateInfo("Error loading model: " + error.message);
+      }
+    }
+
+    function updateInfo(message) {
+      document.getElementById('info').innerText = message;
     }
 
     async function activateXR() {
@@ -50,107 +55,116 @@
       document.body.appendChild(canvas);
       const gl = canvas.getContext('webgl', { xrCompatible: true });
 
-      session = await navigator.xr.requestSession('immersive-ar', {
-        requiredFeatures: ['hit-test', 'dom-overlay', 'camera-access'],
-        domOverlay: { root: document.body }
-      });
-      session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
+      try {
+        session = await navigator.xr.requestSession('immersive-ar', {
+          requiredFeatures: ['hit-test', 'dom-overlay', 'camera-access'],
+          domOverlay: { root: document.body }
+        });
+        session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
 
-      glBinding = new XRWebGLBinding(session, gl);
+        glBinding = new XRWebGLBinding(session, gl);
 
-      const referenceSpace = await session.requestReferenceSpace('local');
-      const viewerSpace = await session.requestReferenceSpace('viewer');
-      const hitTestSource = await session.requestHitTestSource({ space: viewerSpace });
+        const referenceSpace = await session.requestReferenceSpace('local');
+        const viewerSpace = await session.requestReferenceSpace('viewer');
+        const hitTestSource = await session.requestHitTestSource({ space: viewerSpace });
 
-      renderer = new THREE.WebGLRenderer({ canvas: canvas, context: gl, alpha: true });
-      renderer.autoClear = false;
-      camera = new THREE.PerspectiveCamera();
-      camera.matrixAutoUpdate = false;
-      scene = new THREE.Scene();
+        renderer = new THREE.WebGLRenderer({ canvas: canvas, context: gl, alpha: true });
+        renderer.autoClear = false;
+        camera = new THREE.PerspectiveCamera();
+        camera.matrixAutoUpdate = false;
+        scene = new THREE.Scene();
 
-      const directionalLight = new THREE.DirectionalLight(0xffffff, 0.3);
-      directionalLight.position.set(10, 15, 10);
-      scene.add(directionalLight);
+        const directionalLight = new THREE.DirectionalLight(0xffffff, 0.3);
+        directionalLight.position.set(10, 15, 10);
+        scene.add(directionalLight);
 
-      const loader = new THREE.GLTFLoader();
-      loader.load('https://immersive-web.github.io/webxr-samples/media/gltf/reticle/reticle.gltf', (gltf) => {
-        reticle = gltf.scene;
-        reticle.visible = false;
-        scene.add(reticle);
-      });
+        const loader = new THREE.GLTFLoader();
+        loader.load('https://immersive-web.github.io/webxr-samples/media/gltf/reticle/reticle.gltf', (gltf) => {
+          reticle = gltf.scene;
+          reticle.visible = false;
+          scene.add(reticle);
+        }, undefined, (error) => {
+          updateInfo("Error loading reticle model: " + error.message);
+        });
 
-      loader.load('https://immersive-web.github.io/webxr-samples/media/gltf/sunflower/sunflower.gltf', (gltf) => {
-        flower = gltf.scene;
-      });
+        loader.load('https://immersive-web.github.io/webxr-samples/media/gltf/sunflower/sunflower.gltf', (gltf) => {
+          flower = gltf.scene;
+        }, undefined, (error) => {
+          updateInfo("Error loading flower model: " + error.message);
+        });
 
-      const onXRFrame = async (time, frame) => {
+        const onXRFrame = async (time, frame) => {
+          session.requestAnimationFrame(onXRFrame);
+
+          gl.bindFramebuffer(gl.FRAMEBUFFER, session.renderState.baseLayer.framebuffer);
+
+          const pose = frame.getViewerPose(referenceSpace);
+          if (pose) {
+            const view = pose.views[0];
+
+            const viewport = session.renderState.baseLayer.getViewport(view);
+            renderer.setSize(viewport.width, viewport.height);
+
+            camera.matrix.fromArray(view.transform.matrix);
+            camera.projectionMatrix.fromArray(view.projectionMatrix);
+            camera.updateMatrixWorld(true);
+
+            const hitTestResults = frame.getHitTestResults(hitTestSource);
+            if (hitTestResults.length > 0 && reticle) {
+              const hitPose = hitTestResults[0].getPose(referenceSpace);
+              reticle.visible = true;
+              reticle.position.set(hitPose.transform.position.x, hitPose.transform.position.y, hitPose.transform.position.z);
+              reticle.updateMatrixWorld(true);
+            }
+
+            const flowerInScene = scene.children.find(child => child.name === 'sunflower');
+            if (flowerInScene) {
+              if (captureNext && view.camera) {
+                zDistance = flowerInScene.position.y - pose.views[0].transform.position.y;
+
+                const cameraOrientation = pose.views[0].transform.orientation;
+                const cameraQuaternion = new THREE.Quaternion(cameraOrientation.x, cameraOrientation.y, cameraOrientation.z, cameraOrientation.w);
+
+                const gravityVector = new THREE.Vector3(0, -1, 0);
+                const downVector = new THREE.Vector3(0, 0, -1).applyQuaternion(cameraQuaternion);
+
+                const angle = downVector.angleTo(gravityVector);
+                const rotationAxis = new THREE.Vector3().crossVectors(downVector, gravityVector).normalize();
+                const rotationQuaternion = new THREE.Quaternion().setFromAxisAngle(rotationAxis, angle);
+                const euler = new THREE.Euler().setFromQuaternion(rotationQuaternion, 'XYZ');
+                rotationVector = new THREE.Vector3(euler.x, euler.y, euler.z);
+
+                const radToDeg = 180 / Math.PI;
+                const rotationVectorDegrees = new THREE.Vector3(
+                  rotationVector.x * radToDeg,
+                  rotationVector.y * radToDeg,
+                  rotationVector.z * radToDeg
+                );
+
+                updateInfo(
+                  `Distance Z: ${zDistance.toFixed(2)}\n` +
+                  `Camera to Gravity Angle: (${rotationVectorDegrees.x.toFixed(2)}°, ${rotationVectorDegrees.y.toFixed(2)}°, ${rotationVectorDegrees.z.toFixed(2)}°)`
+                );
+
+                captureNext = false;  // Останавливаем захват после кадра
+                captureImage(gl, glBinding, view.camera, 0);
+              }
+            }
+
+            renderer.render(scene, camera);
+          }
+        };
+
         session.requestAnimationFrame(onXRFrame);
 
-        gl.bindFramebuffer(gl.FRAMEBUFFER, session.renderState.baseLayer.framebuffer);
+        document.getElementById('startARBtn').style.display = 'none';
+        document.querySelector('.overlay').style.display = 'block';
 
-        const pose = frame.getViewerPose(referenceSpace);
-        if (pose) {
-          const view = pose.views[0];
-
-          const viewport = session.renderState.baseLayer.getViewport(view);
-          renderer.setSize(viewport.width, viewport.height);
-
-          camera.matrix.fromArray(view.transform.matrix);
-          camera.projectionMatrix.fromArray(view.projectionMatrix);
-          camera.updateMatrixWorld(true);
-
-          const hitTestResults = frame.getHitTestResults(hitTestSource);
-          if (hitTestResults.length > 0 && reticle) {
-            const hitPose = hitTestResults[0].getPose(referenceSpace);
-            reticle.visible = true;
-            reticle.position.set(hitPose.transform.position.x, hitPose.transform.position.y, hitPose.transform.position.z);
-            reticle.updateMatrixWorld(true);
-          }
-
-          const flowerInScene = scene.children.find(child => child.name === 'sunflower');
-          if (flowerInScene) {
-            if (captureNext && view.camera) {
-              zDistance = flowerInScene.position.y - pose.views[0].transform.position.y;
-
-              const cameraOrientation = pose.views[0].transform.orientation;
-              const cameraQuaternion = new THREE.Quaternion(cameraOrientation.x, cameraOrientation.y, cameraOrientation.z, cameraOrientation.w);
-
-              const gravityVector = new THREE.Vector3(0, -1, 0);
-              const downVector = new THREE.Vector3(0, 0, -1).applyQuaternion(cameraQuaternion);
-
-              const angle = downVector.angleTo(gravityVector);
-              const rotationAxis = new THREE.Vector3().crossVectors(downVector, gravityVector).normalize();
-              const rotationQuaternion = new THREE.Quaternion().setFromAxisAngle(rotationAxis, angle);
-              const euler = new THREE.Euler().setFromQuaternion(rotationQuaternion, 'XYZ');
-              rotationVector = new THREE.Vector3(euler.x, euler.y, euler.z);
-
-              const radToDeg = 180 / Math.PI;
-              const rotationVectorDegrees = new THREE.Vector3(
-                rotationVector.x * radToDeg,
-                rotationVector.y * radToDeg,
-                rotationVector.z * radToDeg
-              );
-
-              document.getElementById('info').innerText =
-                `Distance Z: ${zDistance.toFixed(2)}\n` +
-                `Camera to Gravity Angle: (${rotationVectorDegrees.x.toFixed(2)}°, ${rotationVectorDegrees.y.toFixed(2)}°, ${rotationVectorDegrees.z.toFixed(2)}°)`;
-
-              captureNext = false;  // Останавливаем захват после кадра
-              await captureImage(gl, glBinding, view.camera, 0);
-            }
-          }
-
-          renderer.render(scene, camera);
-        }
-      };
-
-      session.requestAnimationFrame(onXRFrame);
-
-      document.getElementById('startARBtn').style.display = 'none';
-      document.querySelector('.overlay').style.display = 'block';
-
-      document.getElementById('placeFlowerBtn').addEventListener('click', placeFlower);
-      document.getElementById('showInfoBtn').addEventListener('click', showInfo);
+        document.getElementById('placeFlowerBtn').addEventListener('click', placeFlower);
+        document.getElementById('showInfoBtn').addEventListener('click', showInfo);
+      } catch (error) {
+        updateInfo("Error activating XR: " + error.message);
+      }
     }
 
     async function startAR() {
@@ -158,7 +172,7 @@
         await loadModel();  // Загрузка модели перед началом XR-сессии
         await activateXR();
       } else {
-        alert('WebXR not supported');
+        updateInfo('WebXR not supported');
       }
     }
 
@@ -179,15 +193,10 @@
       }
     }
 
-    async function showInfo() {
-      const flowerInScene = scene.children.find(child => child.name === 'sunflower');
-      if (flowerInScene) {
-        const flowerPosition = flowerInScene.position;
-        document.getElementById('info').innerText =
-          `Flower Position:\n` +
-          `X: ${flowerPosition.x.toFixed(2)}\n` +
-          `Y: ${flowerPosition.y.toFixed(2)}\n` +
-          `Z: ${flowerPosition.z.toFixed(2)}`;
+    function showInfo() {
+      if (!flowerPlaced) {
+        updateInfo('Flower not placed yet.');
+        return;
       }
     }
 
@@ -197,7 +206,7 @@
       const height = dcamera.height;
 
       if (!texture) {
-        console.error('Failed to get camera texture');
+        updateInfo('Failed to get camera texture');
         return;
       }
 
@@ -219,30 +228,32 @@
       gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, copyTexture, 0);
 
       if (gl.checkFramebufferStatus(gl.FRAMEBUFFER) !== gl.FRAMEBUFFER_COMPLETE) {
-        console.error("Framebuffer incomplete!");
+        updateInfo("Framebuffer incomplete!");
         return;
       }
 
-      const vertexShaderSource = 
-        `attribute vec4 aVertexPosition;
+      const vertexShaderSource = `
+        attribute vec4 aVertexPosition;
         varying vec2 vTexCoord;
         void main(void) {
           gl_Position = aVertexPosition;
           vTexCoord = (aVertexPosition.xy + 1.0) / 2.0;
-        }`;
-      const fragmentShaderSource = 
-        `precision mediump float;
+        }
+      `;
+      const fragmentShaderSource = `
+        precision mediump float;
         varying vec2 vTexCoord;
         uniform sampler2D uSampler;
         void main(void) {
           gl_FragColor = texture2D(uSampler, vTexCoord);
-        }`;
+        }
+      `;
 
       const vertexShader = gl.createShader(gl.VERTEX_SHADER);
       gl.shaderSource(vertexShader, vertexShaderSource);
       gl.compileShader(vertexShader);
       if (!gl.getShaderParameter(vertexShader, gl.COMPILE_STATUS)) {
-        console.error('An error occurred compiling the vertex shader: ' + gl.getShaderInfoLog(vertexShader));
+        updateInfo('An error occurred compiling the vertex shader: ' + gl.getShaderInfoLog(vertexShader));
         gl.deleteShader(vertexShader);
         return;
       }
@@ -251,7 +262,7 @@
       gl.shaderSource(fragmentShader, fragmentShaderSource);
       gl.compileShader(fragmentShader);
       if (!gl.getShaderParameter(fragmentShader, gl.COMPILE_STATUS)) {
-        console.error('An error occurred compiling the fragment shader: ' + gl.getShaderInfoLog(fragmentShader));
+        updateInfo('An error occurred compiling the fragment shader: ' + gl.getShaderInfoLog(fragmentShader));
         gl.deleteShader(fragmentShader);
         return;
       }
@@ -261,7 +272,7 @@
       gl.attachShader(program, fragmentShader);
       gl.linkProgram(program);
       if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-        console.error('Unable to initialize the shader program: ' + gl.getProgramInfoLog(program));
+        updateInfo('Unable to initialize the shader program: ' + gl.getProgramInfoLog(program));
         return;
       }
 
@@ -304,30 +315,16 @@
       let imageData = new ImageData(new Uint8ClampedArray(readbackPixels), scaledWidth, scaledHeight);
       context.putImageData(imageData, 0, 0);
 
-      // Передача изображения в TensorFlow.js
-      const imageTensor = tf.browser.fromPixels(canvas);
-      const resizedImage = tf.image.resizeBilinear(imageTensor, [224, 224]);
-      const batchedImage = resizedImage.expandDims(0);
-
-      // Предсказание
-      const predictions = await model.predict(batchedImage);
-      const predictionImage = predictions.squeeze().arraySync(); // Получение результата в виде массива
-
-      // Отображение предсказанного изображения
-      const predictionCanvas = document.getElementById('predictionCanvas');
-      predictionCanvas.width = 224;
-      predictionCanvas.height = 224;
-      const predictionContext = predictionCanvas.getContext('2d');
-
-      const imageDataArray = new Uint8ClampedArray(predictionImage.flat());
-      const predictionImageData = new ImageData(imageDataArray, 224, 224);
-      predictionContext.putImageData(predictionImageData, 0, 0);
-
-      predictionCanvas.style.display = 'block'; // Показываем canvas с изображением
+      canvas.toBlob((blob) => {
+        captures[captureIndex].imageBlob = blob;
+        updateInfo('Image captured successfully');
+      }, 'image/png');
     }
 
     document.getElementById('startARBtn').addEventListener('click', startAR);
-    document.getElementById('captureButton').addEventListener('click', () => { captureNext = true; });
+    document.getElementById('captureButton').addEventListener('click', () => {
+      captureNext = true;
+    });
   </script>
 </body>
 </html>
