--- a/main.html
+++ b/main.html
@@ -15,8 +15,8 @@
     .overlay { position: absolute; bottom: 10px; right: 10px; z-index: 10; }
     .button { display: block; margin: 5px 0; padding: 10px; background: rgba(0, 0, 0, 0.5); color: white; border: none; border-radius: 5px; cursor: pointer; }
     .info { position: absolute; bottom: 10px; right: 150px; z-index: 10; background: rgba(0, 0, 0, 0.5); color: white; padding: 10px; border-radius: 5px; }
-    #startARBtn, #captureButton { position: absolute; top: 10px; left: 10px; z-index: 10; background: rgba(0, 0, 0, 0.7); color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; }
-    #captureButton { top: 50px; left: 10px; }
+    #startARBtn { position: absolute; top: 10px; left: 10px; z-index: 10; background: rgba(0, 0, 0, 0.7); color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; }
+    #captureButton { position: absolute; top: 50px; left: 10px; z-index: 10; background: rgba(0, 0, 0, 0.7); color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; }
   </style>
 </head>
 <body>
@@ -31,31 +31,24 @@
   <script>
     let flower, reticle, camera, scene, renderer, session, glBinding;
     let flowerPlaced = false;
-    let zDistance = 0;
-    let rotationVector = new THREE.Vector3(0, 0, 0);
     let captureNext = false;
-    const captures = [];
     let model;
 
     async function loadModel() {
       try {
         model = await tf.loadLayersModel('jsModel/model.json');
-        updateInfo("Model loaded successfully");
+        updateInfo("Model loaded successfully.");
       } catch (error) {
-        updateInfo("Error loading model: " + error.message);
+        updateInfo(`Model loading failed: ${error.message}`);
       }
     }
 
-    function updateInfo(message) {
-      document.getElementById('info').innerText = message;
-    }
-
     async function activateXR() {
-      const canvas = document.createElement('canvas');
-      document.body.appendChild(canvas);
-      const gl = canvas.getContext('webgl', { xrCompatible: true });
-
       try {
+        const canvas = document.createElement('canvas');
+        document.body.appendChild(canvas);
+        const gl = canvas.getContext('webgl', { xrCompatible: true });
+
         session = await navigator.xr.requestSession('immersive-ar', {
           requiredFeatures: ['hit-test', 'dom-overlay', 'camera-access'],
           domOverlay: { root: document.body }
@@ -84,13 +77,13 @@
           reticle.visible = false;
           scene.add(reticle);
         }, undefined, (error) => {
-          updateInfo("Error loading reticle model: " + error.message);
+          updateInfo(`Error loading reticle model: ${error.message}`);
         });
 
         loader.load('https://immersive-web.github.io/webxr-samples/media/gltf/sunflower/sunflower.gltf', (gltf) => {
           flower = gltf.scene;
         }, undefined, (error) => {
-          updateInfo("Error loading flower model: " + error.message);
+          updateInfo(`Error loading flower model: ${error.message}`);
         });
 
         const onXRFrame = async (time, frame) => {
@@ -120,33 +113,7 @@
             const flowerInScene = scene.children.find(child => child.name === 'sunflower');
             if (flowerInScene) {
               if (captureNext && view.camera) {
-                zDistance = flowerInScene.position.y - pose.views[0].transform.position.y;
-
-                const cameraOrientation = pose.views[0].transform.orientation;
-                const cameraQuaternion = new THREE.Quaternion(cameraOrientation.x, cameraOrientation.y, cameraOrientation.z, cameraOrientation.w);
-
-                const gravityVector = new THREE.Vector3(0, -1, 0);
-                const downVector = new THREE.Vector3(0, 0, -1).applyQuaternion(cameraQuaternion);
-
-                const angle = downVector.angleTo(gravityVector);
-                const rotationAxis = new THREE.Vector3().crossVectors(downVector, gravityVector).normalize();
-                const rotationQuaternion = new THREE.Quaternion().setFromAxisAngle(rotationAxis, angle);
-                const euler = new THREE.Euler().setFromQuaternion(rotationQuaternion, 'XYZ');
-                rotationVector = new THREE.Vector3(euler.x, euler.y, euler.z);
-
-                const radToDeg = 180 / Math.PI;
-                const rotationVectorDegrees = new THREE.Vector3(
-                  rotationVector.x * radToDeg,
-                  rotationVector.y * radToDeg,
-                  rotationVector.z * radToDeg
-                );
-
-                updateInfo(
-                  `Distance Z: ${zDistance.toFixed(2)}\n` +
-                  `Camera to Gravity Angle: (${rotationVectorDegrees.x.toFixed(2)}°, ${rotationVectorDegrees.y.toFixed(2)}°, ${rotationVectorDegrees.z.toFixed(2)}°)`
-                );
-
-                captureNext = false;  // Останавливаем захват после кадра
+                captureNext = false;  // Stop capture after the frame
                 captureImage(gl, glBinding, view.camera, 0);
               }
             }
@@ -163,13 +130,13 @@
         document.getElementById('placeFlowerBtn').addEventListener('click', placeFlower);
         document.getElementById('showInfoBtn').addEventListener('click', showInfo);
       } catch (error) {
-        updateInfo("Error activating XR: " + error.message);
+        updateInfo(`AR activation failed: ${error.message}`);
       }
     }
 
     async function startAR() {
       if (navigator.xr) {
-        await loadModel();  // Загрузка модели перед началом XR-сессии
+        await loadModel();
         await activateXR();
       } else {
         updateInfo('WebXR not supported');
@@ -185,10 +152,12 @@
         flowerClone.name = 'sunflower';
         scene.add(flowerClone);
         flowerPlaced = true;
+        updateInfo('Flower placed.');
       } else {
         const flowerInScene = scene.children.find(child => child.name === 'sunflower');
         if (flowerInScene) {
           flowerInScene.position.copy(reticle.position);
+          updateInfo('Flower moved.');
         }
       }
     }
@@ -196,129 +165,136 @@
     function showInfo() {
       if (!flowerPlaced) {
         updateInfo('Flower not placed yet.');
-        return;
       }
     }
 
-    async function captureImage(gl, glBinding, dcamera, captureIndex) {
-      const texture = glBinding.getCameraImage(dcamera);
-      const width = dcamera.width;
-      const height = dcamera.height;
+    async function captureImage(gl, glBinding, camera, captureIndex) {
+      try {
+        const texture = glBinding.getCameraImage(camera);
+        const width = camera.width;
+        const height = camera.height;
 
-      if (!texture) {
-        updateInfo('Failed to get camera texture');
-        return;
-      }
-
-      const scale = 1;
-      const scaledWidth = Math.floor(width * scale);
-      const scaledHeight = Math.floor(height * scale);
-      const textureBytes = scaledWidth * scaledHeight * 4;
-
-      let readbackPixels = new Uint8Array(textureBytes);
-      readbackPixels.fill(0);
-
-      let copyTexture = gl.createTexture();
-      gl.bindTexture(gl.TEXTURE_2D, copyTexture);
-      gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, scaledWidth, scaledHeight, 0, gl.RGBA, gl.UNSIGNED_BYTE, null);
-      gl.bindTexture(gl.TEXTURE_2D, null);
-
-      let framebuffer = gl.createFramebuffer();
-      gl.bindFramebuffer(gl.FRAMEBUFFER, framebuffer);
-      gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, copyTexture, 0);
-
-      if (gl.checkFramebufferStatus(gl.FRAMEBUFFER) !== gl.FRAMEBUFFER_COMPLETE) {
-        updateInfo("Framebuffer incomplete!");
-        return;
-      }
-
-      const vertexShaderSource = `
-        attribute vec4 aVertexPosition;
-        varying vec2 vTexCoord;
-        void main(void) {
-          gl_Position = aVertexPosition;
-          vTexCoord = (aVertexPosition.xy + 1.0) / 2.0;
+        if (!texture) {
+          updateInfo('Failed to get camera texture');
+          return;
         }
-      `;
-      const fragmentShaderSource = `
-        precision mediump float;
-        varying vec2 vTexCoord;
-        uniform sampler2D uSampler;
-        void main(void) {
-          gl_FragColor = texture2D(uSampler, vTexCoord);
+
+        const scale = 1;
+        const scaledWidth = Math.floor(width * scale);
+        const scaledHeight = Math.floor(height * scale);
+        const textureBytes = scaledWidth * scaledHeight * 4;
+
+        let readbackPixels = new Uint8Array(textureBytes);
+        readbackPixels.fill(0);
+
+        let copyTexture = gl.createTexture();
+        gl.bindTexture(gl.TEXTURE_2D, copyTexture);
+        gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, scaledWidth, scaledHeight, 0, gl.RGBA, gl.UNSIGNED_BYTE, null);
+        gl.bindTexture(gl.TEXTURE_2D, null);
+
+        let framebuffer = gl.createFramebuffer();
+        gl.bindFramebuffer(gl.FRAMEBUFFER, framebuffer);
+        gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, copyTexture, 0);
+
+        if (gl.checkFramebufferStatus(gl.FRAMEBUFFER) !== gl.FRAMEBUFFER_COMPLETE) {
+          updateInfo("Framebuffer incomplete!");
+          return;
         }
-      `;
 
-      const vertexShader = gl.createShader(gl.VERTEX_SHADER);
-      gl.shaderSource(vertexShader, vertexShaderSource);
-      gl.compileShader(vertexShader);
-      if (!gl.getShaderParameter(vertexShader, gl.COMPILE_STATUS)) {
-        updateInfo('An error occurred compiling the vertex shader: ' + gl.getShaderInfoLog(vertexShader));
-        gl.deleteShader(vertexShader);
-        return;
+        const vertexShaderSource = 
+          attribute vec4 aVertexPosition;
+          varying vec2 vTexCoord;
+          void main(void) {
+            gl_Position = aVertexPosition;
+            vTexCoord = (aVertexPosition.xy + 1.0) / 2.0;
+          }
+        ;
+
+        const fragmentShaderSource = 
+          precision mediump float;
+          varying vec2 vTexCoord;
+          uniform sampler2D uSampler;
+          void main(void) {
+            gl_FragColor = texture2D(uSampler, vTexCoord);
+          }
+        ;
+
+        const vertexShader = gl.createShader(gl.VERTEX_SHADER);
+        gl.shaderSource(vertexShader, vertexShaderSource);
+        gl.compileShader(vertexShader);
+        if (!gl.getShaderParameter(vertexShader, gl.COMPILE_STATUS)) {
+          updateInfo('Vertex shader compile error: ' + gl.getShaderInfoLog(vertexShader));
+          gl.deleteShader(vertexShader);
+          return;
+        }
+
+        const fragmentShader = gl.createShader(gl.FRAGMENT_SHADER);
+        gl.shaderSource(fragmentShader, fragmentShaderSource);
+        gl.compileShader(fragmentShader);
+        if (!gl.getShaderParameter(fragmentShader, gl.COMPILE_STATUS)) {
+          updateInfo('Fragment shader compile error: ' + gl.getShaderInfoLog(fragmentShader));
+          gl.deleteShader(fragmentShader);
+          return;
+        }
+
+        const program = gl.createProgram();
+        gl.attachShader(program, vertexShader);
+        gl.attachShader(program, fragmentShader);
+        gl.linkProgram(program);
+        if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+          updateInfo('Program link error: ' + gl.getProgramInfoLog(program));
+          return;
+        }
+
+        gl.useProgram(program);
+        gl.activeTexture(gl.TEXTURE0);
+        gl.bindTexture(gl.TEXTURE_2D, texture);
+        gl.uniform1i(gl.getUniformLocation(program, "uSampler"), 0);
+
+        const vertices = new Float32Array([
+          -1.0, -1.0,
+           1.0, -1.0,
+          -1.0,  1.0,
+           1.0,  1.0
+        ]);
+
+        const vertexBuffer = gl.createBuffer();
+        gl.bindBuffer(gl.ARRAY_BUFFER, vertexBuffer);
+        gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
+
+        const aVertexPosition = gl.getAttribLocation(program, 'aVertexPosition');
+        gl.enableVertexAttribArray(aVertexPosition);
+        gl.vertexAttribPointer(aVertexPosition, 2, gl.FLOAT, false, 0, 0);
+
+        gl.clear(gl.COLOR_BUFFER_BIT);
+        gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
+
+        gl.readPixels(0, 0, scaledWidth, scaledHeight, gl.RGBA, gl.UNSIGNED_BYTE, readbackPixels);
+
+        const canvas = document.createElement('canvas');
+        canvas.width = scaledWidth;
+        canvas.height = scaledHeight;
+        const ctx = canvas.getContext('2d');
+        const imageData = ctx.createImageData(scaledWidth, scaledHeight);
+        imageData.data.set(readbackPixels);
+        ctx.putImageData(imageData, 0, 0);
+
+        const dataURL = canvas.toDataURL('image/png');
+        const link = document.createElement('a');
+        link.href = dataURL;
+        link.download = `captured-image-${captureIndex}.png`;
+        link.click();
+
+        updateInfo(`Image captured and saved as captured-image-${captureIndex}.png`);
+
+      } catch (error) {
+        updateInfo(`Image capture failed: ${error.message}`);
       }
+    }
 
-      const fragmentShader = gl.createShader(gl.FRAGMENT_SHADER);
-      gl.shaderSource(fragmentShader, fragmentShaderSource);
-      gl.compileShader(fragmentShader);
-      if (!gl.getShaderParameter(fragmentShader, gl.COMPILE_STATUS)) {
-        updateInfo('An error occurred compiling the fragment shader: ' + gl.getShaderInfoLog(fragmentShader));
-        gl.deleteShader(fragmentShader);
-        return;
-      }
-
-      const program = gl.createProgram();
-      gl.attachShader(program, vertexShader);
-      gl.attachShader(program, fragmentShader);
-      gl.linkProgram(program);
-      if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-        updateInfo('Unable to initialize the shader program: ' + gl.getProgramInfoLog(program));
-        return;
-      }
-
-      gl.useProgram(program);
-      gl.activeTexture(gl.TEXTURE0);
-      gl.bindTexture(gl.TEXTURE_2D, texture);
-      gl.uniform1i(gl.getUniformLocation(program, "uSampler"), 0);
-
-      const vertices = new Float32Array([
-        -1.0, -1.0,
-         1.0, -1.0,
-        -1.0,  1.0,
-         1.0,  1.0,
-      ]);
-      const positionBuffer = gl.createBuffer();
-      gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
-      gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
-      const position = gl.getAttribLocation(program, "aVertexPosition");
-      gl.enableVertexAttribArray(position);
-      gl.vertexAttribPointer(position, 2, gl.FLOAT, false, 0, 0);
-
-      gl.viewport(0, 0, scaledWidth, scaledHeight);
-      gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
-
-      gl.readPixels(0, 0, scaledWidth, scaledHeight, gl.RGBA, gl.UNSIGNED_BYTE, readbackPixels);
-
-      gl.bindFramebuffer(gl.FRAMEBUFFER, null);
-      gl.deleteFramebuffer(framebuffer);
-      gl.deleteTexture(copyTexture);
-      gl.deleteProgram(program);
-      gl.deleteShader(vertexShader);
-      gl.deleteShader(fragmentShader);
-      gl.deleteBuffer(positionBuffer);
-
-      let canvas = document.createElement('canvas');
-      canvas.width = scaledWidth;
-      canvas.height = scaledHeight;
-      let context = canvas.getContext('2d');
-
-      let imageData = new ImageData(new Uint8ClampedArray(readbackPixels), scaledWidth, scaledHeight);
-      context.putImageData(imageData, 0, 0);
-
-      canvas.toBlob((blob) => {
-        captures[captureIndex].imageBlob = blob;
-        updateInfo('Image captured successfully');
-      }, 'image/png');
+    function updateInfo(message) {
+      const infoElement = document.getElementById('info');
+      infoElement.textContent = message;
     }
 
     document.getElementById('startARBtn').addEventListener('click', startAR);
