--- a/main.html
+++ b/main.html
@@ -197,6 +197,14 @@
       canvas.width = scaledWidth;
       canvas.height = scaledHeight;
       ctx.putImageData(imageData, 0, 0);
+      canvas.toBlob((blob) => {
+  const link = document.createElement('a');
+  link.href = URL.createObjectURL(blob);
+  link.download = 'captured_image.png'; // Имя файла для сохранения
+  link.click();
+}, 'image/png');
+
+      
 
       // Преобразование изображения в формат, подходящий для нейросети
       const imgTensor = tf.browser.fromPixels(canvas, 3);
